Fix extra space before NavItems in SideNav

--- a/src/scenes/home/header/sideNav/sideNav.css
+++ b/src/scenes/home/header/sideNav/sideNav.css
@@ -55,7 +55,6 @@
   display: flex;
   height: 100%;
   flex-direction: column;
-  padding-top: 1.75rem;
   position: relative;
 }
 
